--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nogga Partner Program | 車で幸せをつくる。新しい収益の柱を。</title>
-    <meta name="description" content="在庫リスクゼロ・店舗不要。「正直だから選ばれる」車オークション出品代行ビジネス。あなたの「人脈」と「信頼」をつなぐだけで、感謝される新規事業へ。">
+    <meta name="description" content="在庫リスクゼロ・店舗不要。「正直だから選ばれる」車のオークション出品代行ビジネス。あなたの「人脈」と「信頼」をつなぐだけで、感謝される新規事業へ。">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
     <header class="hero">
         <div class="container">
             <div class="hero-content">
-                <p class="hero-sub">在庫リスクゼロ・店舗不要。「正直だから選ばれる」車オークション代行ビジネス。</p>
+                <p class="hero-sub">在庫リスクゼロ・店舗不要。「正直だから選ばれる」車のオークション出品代行ビジネス。</p>
                 <h1 class="hero-title">車で幸せをつくる。<br>新しい収益の柱を。</h1>
                 <p class="hero-lead">あなたの「人脈」と「信頼」をつなぐだけで、<br class="sp-only">感謝される新規事業へ。<br>この鹿児島から、<br
                         class="sp-only">新しい中古車流通のスタンダードを共に創りませんか？</p>
@@ -31,7 +31,7 @@
     <!-- Introduction Section -->
     <section class="section intro">
         <div class="container">
-            <h2 class="section-title">なぜ今、「車オークション代行」なのか？</h2>
+            <h2 class="section-title">なぜ今、「車のオークション出品代行」なのか？</h2>
             <div class="intro-box">
                 <h3 class="intro-headline">業界の「不透明さ」に、多くのお客様が不安を抱えています。</h3>
                 <ul class="intro-list">
